# pdf-check

./: .gitignore  LICENSE  README.md  README_EN.md  generate_all_in_one_malicious_pdf.py  pdf_sanitizer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pdf_check/: __init__.py  cli.py  llm_detection.py  pdf_scanner.py  sanitizer.py  sanitizer_cli.py  types.py  web_app.py
pdf_check/static/: app.css
pdf_check/templates/: index.html
tests/: conftest.py  test_llm_detection.py  test_sanitizer_helpers.py
